--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
   ],
   "dependencies": {
     "bootstrap": "^3.3.7",
-    "angular": "^1.6.1"
+    "angular": "^1.6.1",
+    "angular-route": "^1.6.1"
   }
 }
